# ===-- source/CMakeLists.txt - Source build configuration ----------------=== #
#
#                            The OsNES Project
# 
#  This file is distributed under GPL v2. See LICENSE.md for details.
#
# ===----------------------------------------------------------------------=== #
# Subsystem build directories
add_subdirectory(common)
add_subdirectory(cpu)


