# ===-- source/CMakeLists.txt - Source build configuration ----------------=== #
#
#                            The OpenNES Project
# 
#  This file is distributed under GPL v2. See LICENSE.md for details.
#
# ===----------------------------------------------------------------------=== #
# Subsystem build directories
add_subdirectory(common)
add_subdirectory(nes)
add_subdirectory(cpu)


